--- a/style.css
+++ b/style.css
@@ -3,16 +3,26 @@
 }
 
 body {
+    margin: 0;
+    padding: 0;
     width: 98vw;
     height: 97vh;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    background-color: #333332;
 }
 
 .container {
     width: 650px;
     height: 550px;
+}
+
+.logs {
+    width: 300px;
+    height: 550px;
+    border: 2px solid rgb(245, 245, 245);
+    border-radius: 1em;
 }
 
 #light {
