--- a/style.css
+++ b/style.css
@@ -1,34 +1,50 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 * {
     box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
 }
 
 body {
     margin: 0;
     padding: 0;
-    width: 98vw;
-    height: 97vh;
+    width: 100%;
+    height: 100vh;
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    background-color: #333332;
+    justify-content: center;
+    color: whitesmoke;
+    background-color: #434343;
 }
 
 .container {
-    width: 650px;
-    height: 550px;
+    width: 98vh;
+    height: 98vh;
+}
+
+.logo {
+    position: fixed;
+    left: 1em;
+    bottom: 1em;
+    width: 200px;
+}
+
+.logo img {
+    width: inherit;
 }
 
 .logs {
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
     width: 300px;
-    height: 550px;
-    border: 2px solid rgb(245, 245, 245);
+    height: 75vh;
+    border: 2px solid grey;
     border-radius: 1em;
+
+    overflow-y: auto;
 }
 
-#light {
-    display: initial;
-}
-
-#tvscreen {
-    display: initial;
+.logs p {
+    margin: 0;
 }
